5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1592_2426.log
== TEST (2019-03-29 16:01:29) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = ?
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * "d"
# por fim imprima "l" e "d"
print(d , l)
-- ERROR:
File "XXXX", line 5
    d = ?
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:02:03) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d =float(input(?))
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * "d"
# por fim imprima "l" e "d"
print(d , l)
-- ERROR:
File "XXXX", line 5
    d =float(input(?))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:02:55) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = 
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * "d"
# por fim imprima "l" e "d"
print("d ,l")
-- ERROR:
File "XXXX", line 5
    d = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:04:36) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * "d"
# por fim imprima "l" e "d"
print("d ,l")
-- OUTPUT:
d ,l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:06:50) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d ,l")
-- OUTPUT:
d ,l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:06:51) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d ,l")
-- EXECUTION TIME:
0.132345
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
d ,l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
d ,l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
d ,l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:08:26) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d ,l")
-- OUTPUT:
d ,l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:08:32) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d ,l")
-- EXECUTION TIME:
0.209416
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
d ,l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
d ,l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
d ,l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:08:37) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d ,l")
-- OUTPUT:
d ,l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:09:01) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d ,l)
-- OUTPUT:
900.0 10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:09:07) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d ,l)
-- OUTPUT:
900.0 10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:09:20) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d , l)
-- EXECUTION TIME:
0.158952
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0 10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0 7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0 1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:09:21) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d , l)
-- OUTPUT:
900.0 10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:10:24) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t1 = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d , t1)
-- EXECUTION TIME:
0.205752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 8, in <module>
    l= 12 * d
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:10:26) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t1 = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d , t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    l= 12 * d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:11:46) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)
-- EXECUTION TIME:
0.140917
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:12:01) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d")
print("l")
-- OUTPUT:
d
l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:12:07) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print("d")
print("l")
-- EXECUTION TIME:
0.178786
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
d
l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
d
l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
d
l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:12:43) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- EXECUTION TIME:
0.143929
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:12:44) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:17:59) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t= t1 * t
d = v * t
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- EXECUTION TIME:
0.181916
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 5, in <module>
    t= t1 * t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:20:44) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t= t1 * 60
d = v * t
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- EXECUTION TIME:
0.137368
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
54000.0
648000.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
36000.0
432000.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
5760.0
69120.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:20:51) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t= t1 * 60
d = v * t
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- OUTPUT:
54000.0
648000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:35:57) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t= (t1 //1) + ((t1%1) * 60) 
d = v * t
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:36:16) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica
t= (t1 //1) + ((t1%1) * 60) 
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= 12 * d
# por fim imprima "l" e "d"
print(d)
print(l)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:38:13) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica 
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= d / 12
# por fim imprima "l" e "d"
print(d)
print(l)

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:38:23) 
-- CODE:
t1=float(input("tempo gasto: "))
v=float(input("vm: "))
# A distancia percorrida é a velocidade do carro X tempo
#substituir a ? pela operaçao matematica 
d = v * t1
# a quantidade de litros gasto para o veiculo que anda 12km/l. Multiplique 12km/l X Distancia e encontre os litros gastos
# Coloque a distancia encontrada no topico anterior no lugar de "d"
l= d / 12
# por fim imprima "l" e "d"
print(d)
print(l)

-- EXECUTION TIME:
0.199054
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
